--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
+    "mongoose": "^8.14.2",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.11.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1"
   }
