--- a/package.json
+++ b/package.json
@@ -6,27 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "api": "json-server --watch db.json --port=3005"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@eslint/eslintrc": "^3",
     "@fontsource/cairo": "^5.2.5",
     "@ibm/plex-sans-arabic": "^1.1.0",
-    "@mui/icons-material": "^7.0.2",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
-    "axios": "^1.9.0",
-    "mongoose": "^8.14.2",
     "@netlify/plugin-nextjs": "^5.11.1",
+    "axios": "^1.9.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "mongoose": "^8.14.2",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.0.0",
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1"
+    "react-dom": "^19.0.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
