--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {}
 }
