--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@eslint/eslintrc": "^3",
     "@fontsource/cairo": "^5.2.5",
+    "@hookform/resolvers": "^5.0.1",
     "@ibm/plex-sans-arabic": "^1.1.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
@@ -25,7 +26,10 @@
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.8"
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.56.4",
+    "swiper": "^11.2.8",
+    "yup": "^1.6.1"
   },
   "devDependencies": {}
 }
