--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "15.3.1",
     "mongoose": "^8.14.2",
     "next": "15.3.1",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
